Готовая страница Портфолио

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
                 </li>
             </ul>
         </div>
-               
     </header>
     <main>
 <!--HERO-->
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="modal-btn" type="button">Заказать услугу</button>
+                <button class="modal-btn btn" type="button">Заказать услугу</button>
             </div>
         </section>
 
@@ -156,7 +155,6 @@
                 </ul>
             </address>
         </div>
-
     </footer>
 </body>
 </html>
