--- a/portfolio.html
+++ b/portfolio.html
@@ -14,115 +14,167 @@
 <body>
 <!--HEADER-->
     <header class="header">
-        <nav class="navigation">
-            <a class="logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
-            <ul class="menu list">
-                <li class="menu-item">
-                    <a class="menu-link link" href="./index.html">Студия</a>
+        <div class="container header-container">
+            <nav class="navigation">
+                <a class="logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
+                <ul class="menu list">
+                    <li class="menu-item">
+                        <a class="menu-link link current" href="./index.html">Студия</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link link" href="">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="contacts list">
+                <li class="contacts-item">
+                    <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="menu-item">
-                    <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link link" href="">Контакты</a>
+                <li class="contacts-item">
+                    <a class="tel-link link" href="tel:+38096111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="contacts list">
-            <li class="contacts-item">
-                <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="contacts-item">
-                <a class="tel-link link" href="tel:+38096111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
 <!--PORTFOLIO-->
     <section>
-        <h2 hidden> Портфолио</h2>
-        <ul class="filters list">
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Все</button>
+        <div class="container padding-container">
+            <h2 hidden> Портфолио</h2>
+            <ul class="filters list">
+                <li class="filter-item">
+                    <button class="filter-btn btn" type="button">Все</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn btn" type="button">Веб-сайты</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn btn" type="button">Приложения</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn btn" type="button">Дизайн</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn btn" type="button">Маркетинг</button>
+                </li>
+            </ul>    
+            <ul class="portfolio-page-items list">
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/technokryak.jpg"
+                    alt="Страница сайта на экране ноутбука" width="370" height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Технокряк</h3>
+                        <p class="portfolio-page-item-description">Веб-сайт</p>
+                    </div>
+                </a>
             </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Веб-сайты</button>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                <img class="portfolio-page-item-img" src="./images/portfolio-list/new-orlean-poster.jpg" alt="Постер" width="370"
+                    height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Постер <span lang=en>New Orlean vs Golden Star</span></h3>
+                        <p class="portfolio-page-item-description">Дизайн</p>
+                    </div>
+                </a>
             </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Приложения</button>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/restraunt-seafood.jpg" alt="Логотип ресторана"
+                    width="370" height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Ресторан <span lang=en>Seafood</span></h3>
+                        <p class="portfolio-page-item-description">Приложение</p>
+                    </div>
+                </a>
             </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Дизайн</button>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/project-prime.jpg" alt="Наушники" width="370"
+                    height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Проект <span lang=en>Prime</span></h3>
+                        <p class="portfolio-page-item-description">Маркетинг</p>
+                    </div>
+                </a>
             </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Маркетинг</button>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/project-boxes.jpg" alt="Коробки" width="370"
+                    height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Проект <span lang=en>Boxes</span></h3>
+                        <p class="portfolio-page-item-description">Приложение</p>
+                    </div>
+                </a>
             </li>
-        </ul>
-        <ul class="portfolio list">
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/technokryak.jpg" alt="Страница сайта на экране ноутбука" width="370" height="294">
-                <h3 class="portfolio-item-title">Технокряк</h3>
-                <p class="portfolio-item-descroption">Веб-сайт</p>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/inspiration.jpg" alt="Страница сайта на монитрое"
+                    width="370" height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title" lang=en>Inspiration has no Borders</h3>
+                        <p class="portfolio-page-item-description">Веб-сайт</p>
+                    </div>
+                </a>
             </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/new-orlean-poster.jpg" alt="Постер" width="370" height="294">
-                <h3 class="portfolio-item-title">Постер <span lang=en>New Orlean vs Golden Star</span></h3>
-                <p class="portfolio-item-descroption">Дизайн</p>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/limited-edition.jpg" alt="Разворот журнала"
+                    width="370" height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Издание <span lang=en>Limited Edition</span></h3>
+                        <p class="portfolio-page-item-description">Дизайн</p>
+                    </div>
+                </a>
             </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/restraunt-seafood.jpg" alt="Логотип ресторана" width="370" height="294">
-                <h3 class="portfolio-item-title">Ресторан <span lang=en>Seafood</span></h3>
-                <p class="portfolio-item-descroption">Приложение</p>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/project-lab.jpg" alt="Логотип проекта" width="370"
+                    height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title">Проект <span lang=en>LAB</span></h3>
+                        <p class="portfolio-page-item-description">Маркетинг</p>
+                    </div>
+                </a>
             </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/project-prime.jpg" alt="Наушники" width="370" height="294">
-                <h3 class="portfolio-item-title">Проект <span lang=en>Prime</span></h3>
-                <p class="portfolio-item-descroption">Маркетинг</p>
+            <li class="portfolio-page-item">
+                <a class="portfolio-page-card link" href="">
+                    <img class="portfolio-page-item-img" src="./images/portfolio-list/growing-bussiness.jpg"
+                    alt="Реклама приложения на экране ноутбука" width="370" height="294">
+                    <div class="portfolio-page-card-dscr">
+                        <h3 class="portfolio-page-item-title" lang=en>Growing Business</h3>
+                        <p class="portfolio-page-item-description">Приложение</p>
+                    </div>
+                </a>
             </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/project-boxes.jpg" alt="Коробки" width="370" height="294">
-                <h3 class="portfolio-item-title">Проект <span lang=en>Boxes</span></h3>
-                <p class="portfolio-item-descroption">Приложение</p>
-            </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/inspiration.jpg" alt="Страница сайта на монитрое" width="370" height="294">
-                <h3 class="portfolio-item-title" lang=en>Inspiration has no Borders</h3>
-                <p class="portfolio-item-descroption">Веб-сайт</p>
-            </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/limited-edition.jpg" alt="Разворот журнала" width="370" height="294">
-                <h3 class="portfolio-item-title">Издание <span lang=en>Limited Edition</span></h3>
-                <p class="portfolio-item-descroption">Дизайн</p>
-            </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/project-lab.jpg" alt="Логотип проекта" width="370" height="294">
-                <h3 class="portfolio-item-title">Проект <span lang=en>LAB</span></h3>
-                <p class="portfolio-item-descroption">Маркетинг</p>
-            </li>
-            <li class="portfolio-item"> 
-                <img class="portfolio-item-img" src="./images/portfolio-list/growing-bussiness.jpg" alt="Реклама приложения на экране ноутбука" width="370" height="294">
-                <h3 class="portfolio-item-title" lang=en>Growing Business</h3>
-                <p class="portfolio-item-descroption">Приложение</p>
-            </li>
-        </ul>
+            </ul>
+        </div>
+
     </section>
 <!--FOOTER-->
     <footer class="footer">
-        <a class="footer-logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
-        <address>
-            <ul class="address-items list">
-                <li class="address-item">
-                    <a class="map-link link" href="https://goo.gl/maps/Dh8G3uwG5ZsZuSZK8" target="_blank"
-                        rel="noopener noreferrer">г. Киев, пр-т Леси
-                        Украинки, 26</a>
-                </li>
-                <li class="address-item">
-                    <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li class="address-item">
-                    <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container footer-container">
+            <a class="footer-logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
+            <address>
+                <ul class="address-items list">
+                    <li class="address-item">
+                        <a class="map-link link" href="https://goo.gl/maps/Dh8G3uwG5ZsZuSZK8" target="_blank"
+                            rel="noopener noreferrer">г. Киев, пр-т Леси
+                            Украинки, 26</a>
+                    </li>
+                    <li class="address-item">
+                        <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="address-item">
+                        <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
