Итоговые готовые страницы

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
     </header>
 <!--PORTFOLIO-->
     <section>
-        <div class="container padding-container">
-            <h2 hidden> Портфолио</h2>
+        <div class="container section">
+            <h2 class="visually-hidden"> Портфолио</h2>
             <ul class="filters list">
                 <li class="filter-item">
                     <button class="filter-btn btn" type="button">Все</button>
