--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!--BENEFITS-->
         <section>
             <div class="container benefits-container">
-                <h2 hidden>Преимущества</h2>
+                <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="benefits list">
                     <li class="benefits-item">
                         <h3 class="benefits-item-title">Внимание к деталям </h3>
@@ -100,7 +100,7 @@
 
 <!--TEAM-->
         <section class="team">
-            <div class="container padding-container">
+            <div class="container section">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
