--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </section>
 
 <!--BENEFITS-->
-        <section>
-            <div class="container benefits-container">
+        <section class="benefits-section">
+            <div class="container">
                 <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="benefits list">
                     <li class="benefits-item">
@@ -78,8 +78,8 @@
         </section>
 
 <!--PORTFOLIO-->
-        <section>
-            <div class="container portfolio-container">
+        <section class="portfolio-section">
+            <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="portfolio list">
                     <li class="portfolio-item">
@@ -99,8 +99,8 @@
         </section>
 
 <!--TEAM-->
-        <section class="team">
-            <div class="container section">
+        <section class="team section">
+            <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
@@ -139,7 +139,7 @@
     <footer class="footer">
         <div class="container footer-container">
             <a class="footer-logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
-            <address>
+            <address class="address-list">
                 <ul class="address-items list">
                     <li class="address-item">
                         <a class="map-link link" href="https://goo.gl/maps/Dh8G3uwG5ZsZuSZK8" target="_blank"
