--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
         </div>
     </header>
 <!--PORTFOLIO-->
-    <section>
-        <div class="container section">
+    <section class="section">
+        <div class="container">
             <h2 class="visually-hidden"> Портфолио</h2>
             <ul class="filters list">
                 <li class="filter-item">
