--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
                 <a class="logo-link link" href="./index.html" lang=en><span class="logo-part">Web</span>Studio</a>
                 <ul class="menu list">
                     <li class="menu-item">
-                        <a class="menu-link link current" href="./index.html">Студия</a>
+                        <a class="menu-link link" href="./index.html">Студия</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+                        <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="menu-item">
                         <a class="menu-link link" href="">Контакты</a>
